[package]
name = "curvepress"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Lossy time series compression: RDP/VW point reduction + quantization"
repository = "https://github.com/fsbondtec/curvepress-rust"
categories = ["compression", "science"]
keywords = ["compression", "time-series", "rdp", "visvalingam", "quantization"]

[lib]
crate-type = ["lib", "cdylib"]
# lib    → Rust consumers (crates.io)
# cdylib → WASM (wasm-pack)

[dependencies]
thiserror = "1"

[features]
default = []
wasm   = ["dep:wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
