[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "curvepress"
version = "0.1.0"
description = "Lossy time series compression: RDP/VW point reduction + quantization"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]
keywords = ["compression", "time-series", "rdp", "visvalingam", "quantization"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]

[tool.maturin]
features = ["python", "pyo3/extension-module"]
module-name = "curvepress._curvepress"
python-source = "python"
